--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -16,12 +16,27 @@
             Registrar Nuevo Producto
           </button>
 
+
+          <button 
+            (click)="rutaRegistrarCategoria()" 
+            class="action-button primary-action">
+            <svg xmlns="http://www.w3.org/2000/svg" class="button-icon" viewBox="0 0 20 20" fill="currentColor">
+              <path fill-rule="evenodd" d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z" clip-rule="evenodd" />
+            </svg>
+            Registrar Alguna Categoría
+          </button>
+
+
+          
+
           <button class="action-button secondary-action">
             <svg xmlns="http://www.w3.org/2000/svg" class="button-icon" viewBox="0 0 20 20" fill="currentColor">
               <path fill-rule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clip-rule="evenodd" />
             </svg>
             Explorar Categorías
           </button>
+
+
         </div>
 
         <div class="hero-stats animate__animated animate__fadeIn animate__delay-2s">
